--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    height: 45px;
+    width: 100%;
+    color: white;
+    text-align: center;
+}
+
+.form-group{
+    margin-bottom: 1rem;
+}
+label{
+    margin-bottom: 0.5rem;
+}
